test/org/midica/testfiles/failing/eff-func-param-too-low-3.midica
INCLUDE inc/instruments.midica


0: balance.line(+1,-101%)
